@@ -1,3 +1,8 @@
+2008-01-23  Alexander V. Lukyanov <lav@yars.free.net>
+
+	* ftpclass.cc: always use passive mode for proxy_is_http==true;
+	  use GetFlag function everywhere to test flags.
+
 2008-01-21  Alexander V. Lukyanov <lav@yars.free.net>
 
 	* MirrorJob.h: use SMTaskRef properly (fixes kill all core dump).
